zokrates_cli/examples/compile_errors/assertion_unequal_arrays.zok
def main() {
    assert([1f] == [2f]);
    return;
}
